fixed spacing bug

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ a:active {
 .nav-two ul {
   border: 1px solid black;
   flex: 1;
-  max-width: 30%;
+  max-width: 40%;
   display: flex;
   justify-content: space-around;
 }
@@ -105,8 +105,8 @@ a:active {
 }
 .nav-three ul {
   border: 1px solid black;
-  flex: 1;
-  max-width: 50%;
+  flex: 2;
+  max-width: 35%;
   display: flex;
   justify-content: space-around;
 }
